clean upo runner.lib.TestParameters
- remove unused fields
- make all external code go through the get(XXX)
  methods instead of also using the default values
- remove default values
  declarations and inline them, since they are now unnecessary.

Change-Id: Idc875fbd133de90044647f3e3b1feb225d81a643